--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DB_URI = mongodb+srv://chahat:KZvVjWhV0HU6M2WE@cluster100.37fngzx.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = 123456
