--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   }
 }
