--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^4.6.1",
     "tailwindcss": "^3.3.3"
   }
 }
