--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.3",
     "html-react-parser": "^5.1.1",
     "react": "^18.2.0",
