--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-code-block-lowlight": "^2.2.2",
+    "@tiptap/extension-color": "^2.2.2",
+    "@tiptap/extension-text-style": "^2.2.2",
     "@tiptap/html": "^2.1.16",
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
@@ -15,6 +18,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.3",
     "html-react-parser": "^5.1.1",
+    "lowlight": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.4",
