adding image to content of the post

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-code-block-lowlight": "^2.2.2",
     "@tiptap/extension-color": "^2.2.2",
+    "@tiptap/extension-dropcursor": "^2.2.2",
+    "@tiptap/extension-image": "^2.2.2",
     "@tiptap/extension-text-style": "^2.2.2",
     "@tiptap/html": "^2.1.16",
     "@tiptap/pm": "^2.1.16",
